--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = {extras = ["all"], version = "^0.97.0"}
 pyhumps = "^3.8.0"
 celery = {extras = ["redis"], version = "^5.3.1"}
 scipy = "^1.10.1"
+invoke = "^2.1.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.2"
@@ -19,7 +20,16 @@ mypy = "^1.3.0"
 black = "^23.3.0"
 flower = "^1.2.0"
 ruff = "^0.0.272"
+types-redis = "^4.5.5.2"
+pytest-fastapi-deps = "^0.2.3"
+pytest-mock = "^3.11.1"
+pytest-asyncio = "^0.21.0"
+pytest-freezegun = "^0.4.2"
+pytest-celery = "^0.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
