--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "axios": "^1.4.0",
+    "random-words": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +47,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
+    "@types/uuid": "^9.0.2",
     "axios-mock-adapter": "^1.21.5",
     "http-proxy-middleware": "^2.0.6",
     "identity-obj-proxy": "^3.0.0",
